Try Java Structured Currency features